--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <div class="container">
             <div class="logo">
-                <img src="/images/main logo.png" alt="FitTrack Logo">
+                <img src="main logo.png" alt="FitTrack Logo">
             </div>
             <nav>
                 <ul>
@@ -28,7 +28,7 @@
 
     <section id="home" class="hero-section">
         <div class="hero-content">
-            <img src="/images/Main Image.jpg" alt="Smart Fitness Tracker" class="product-image">
+            <img src="Main Image.jpg" alt="Smart Fitness Tracker" class="product-image">
             <div class="overlay">
                 <div class="product-info">
                     <h1>Stay Fit, Stay Smart</h1>
